// Vitest Snapshot v1

exports[`<Tooltip /> > should render 1`] = `
<StyledTooltip
  arrow={true}
  position="left"
  size="regular"
  title="Tip"
/>
`;

exports[`<Tooltip /> > should render with children 1`] = `
<StyledTooltip
  arrow={true}
  position="left"
  size="regular"
  title="Tip"
>
  Hello world
</StyledTooltip>
`;

exports[`<Tooltip /> > should render without position prop 1`] = `
<StyledTooltip
  arrow={true}
  position="left"
  size="regular"
  title="Tip"
/>
`;
